ingress/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: chat
spec:
  rules:
  - host: "*"
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name:  nginx-project
            port:
              number: 80
      - path: /chat 
        pathType: Prefix
        backend:
          service:
            name: go-chat
            port:
              number: 8080
